# chrom-learning-2026

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
chromlearn/: __init__.py
docs/: centering_rollout_issue.md  design.md  implementation_plan.md  llm_cross-valid_audit.md
exploratory_notebooks/: 01_explore_data.py  02_velocity_spatial_not_temporal.py  02c_chrom_pole_projection_test.py  03_chromosomes_follow_centrosomes.py  04_model_selection.py  05_robustness.py  06_diffusion_landscape.py
notebooks/: 00_main_figure.py  00b_supplement.py  01_explore_data.ipynb  01_explore_data.py  01b_velocity_spatial_not_temporal.py  02_chromosomes_follow_centrosomes.py  02_velocity_spatial_not_temporal.py  02b_explore_chrom_pole_asymm.py  03_chromosomes_follow_centrosomes.ipynb  03_chromosomes_follow_centrosomes.py  03_model_selection.py  03b_force_partition_reconciliation.py  04_fit_kernels.py  04_model_selection.ipynb  04_model_selection.py  04_robustness.py  05_robustness.py  06_diffusion_landscape.ipynb  06_diffusion_landscape.py  06_forward_simulation.py  07_per_cell_heterogeneity.py  08_cross_condition.ipynb  08_cross_condition.py  09_neural_relational_inference.py
old_code/: aggregate_trajs_dec2022.m  aggregrate_clouds.m  cell_db.m  dot_autocov.m  fig2_learned_model.m  old_paper.tex  suppfig1_err_model.m  suppfig21_example_centerofmass.m  suppfig2_corr.m  t_polynomial.m  t_polynomial_ab.m  t_project_value_ab.m
paper_figures/: 00_main_figure.py  00b_supplement.py
scripts/: execute_notebooks.sh
(+75 files in other folders)
