[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chromlearn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "h5py",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.pytest.ini_options]
addopts = "-p no:zarr"
