[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chromlearn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "h5py",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "jupytext", "joblib"]

[tool.setuptools.packages.find]
include = ["chromlearn*"]

[tool.pytest.ini_options]
addopts = "-p no:zarr"
